# Pastebin

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/pastebin_backend/: Cargo.toml  pastebin_backend.did
src/pastebin_backend/src/: lib.rs
src/pastebin_frontend/: package.json
src/pastebin_frontend/src/: App.js  styles.css
