[package]
name = "pastebin_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde = "1.0"
serde_cbor = "0.11"
serde_derive = "1.0"
candid = "0.7.5"
